# yura

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml  release.yml
proto/: base.proto  rpc.proto  user.proto
src/: main.rs
src/config/: app_config.rs  mod.rs
src/database/: mod.rs
src/database/table/: account.rs
src/logger/: mod.rs
src/rpc/: account.rs  mod.rs  status.rs
src/rpc/base/: mod.rs
src/rpc/user/: mod.rs
work_directory/: config.template.yml
