[package]
name = "yura"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.*"
prost = "0.*"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.*"