[package]
name = "yura"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.*"
prost = "0.*"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.*", features = ["derive"] }
serde_yaml = "0.*"
serde_json = "1.*"
url = "2.*"
log = "0.*"
fast_log = "1.*"
rbson = "2.*"
rbatis = { version = "3.*", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
lazy_static = "1.*"

[build-dependencies]
tonic-build = "0.*"